tests/agl/rejections/type/parametricity_print.agl
render(1, quote_strings = 1)
